# django-tawkto

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  manage.py  setup.cfg  setup.py
dj_tawkto/: settings.py  urls.py  wsgi.py
tawkto/: apps.py  views.py
tawkto/templates/tawkto/: teste.html
tawkto/templates/tawkto/templatetags/: tawkto_script.html
tawkto/templatetags/: tawkto_tags.py
test_project/app/: views.py
test_project/app/templates/: test.html
test_project/test_project/: settings.py  urls.py
