[metadata]
name = django-tawkto
version = 0.4.1
description = A simple Django app to integrates with https://www.tawk.to/ chat.
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/CleitonDeLima/django-tawkto
author = Cleiton de Lima
author_email = cleiton.limapin@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = tawkto

[tools:black]
line-length = 80
skip-string-normalization = true
